<resources>
    <string name="app_name">PDF·HWP 뷰어</string>
    <string name="open_file">파일 열기</string>
    <string name="main_hint">기기에 저장된 PDF 또는 HWP 파일을 선택해 열거나,\n다른 앱의 \'공유\' 메뉴에서 이 앱으로 파일을 보낼 수 있습니다.</string>
    <string name="loading">불러오는 중…</string>
    <string name="error_no_file">열 파일을 찾을 수 없습니다.</string>
    <string name="error_unsupported_type">PDF 또는 HWP 파일만 열 수 있습니다.</string>
    <string name="error_open_failed">파일을 여는 중 오류가 발생했습니다. 파일이 손상되었거나 지원하지 않는 형식일 수 있습니다.</string>
    <string name="error_permission_expired">공유받은 파일에 대한 접근 권한이 만료되었습니다. 파일을 다시 선택해주세요.</string>
    <string name="reselect_file">다시 선택하기</string>

    <string name="search">검색</string>
    <string name="search_hint">검색어 입력</string>
    <string name="search_prev">이전</string>
    <string name="search_next">다음</string>
    <string name="search_close">닫기</string>
    <string name="search_count_format">%1$d / %2$d</string>
    <string name="search_no_match">0 / 0</string>

    <string name="bookmark_add">북마크</string>
    <string name="bookmark_list">목록</string>
    <string name="bookmark_unavailable">이 PDF 뷰어에서는 북마크를 지원하지 않습니다.</string>
    <string name="bookmark_saved">북마크를 저장했습니다.</string>
    <string name="bookmark_dialog_title">북마크 메모</string>
    <string name="memo_hint">메모 (선택 사항)</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="bookmark_edit_dialog_title">메모 수정</string>
    <string name="bookmark_updated">메모를 수정했습니다.</string>
    <string name="no_bookmarks">저장된 북마크가 없습니다.</string>
    <string name="bookmark_position_pdf">페이지 %1$d</string>
    <string name="bookmark_position_hwp">스크롤 위치 %1$d</string>
</resources>
